--- a/Kapstondaw/BACKENDMONATO/style1.css
+++ b/Kapstondaw/BACKENDMONATO/style1.css
@@ -27,9 +27,9 @@
   line-height: normal;
 }
 .box {
-  width: 100%;
+  width: 96.3%;
   height: auto;
-  background: #FFFFFF;
+  background: #ffffff;
   display: flex;
   flex-direction: column;
 }
@@ -37,12 +37,12 @@
 .rectangle {
   background-color: #f5f5f5;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  width: 96.2%;
+  width: 100%;
   height: 50px;
   margin-top: 85px;
   display: flex;
   align-items: center;
-  position: fixed;
+  
   justify-content: space-between;
   z-index: 2;
 }
@@ -91,8 +91,8 @@
 }
 
 .stats {
-  margin-top: 140px;
-  width: 96.3%;
+  margin-top: 5px;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
