--- a/Kapstondaw/BACKENDMONATO/style4.css
+++ b/Kapstondaw/BACKENDMONATO/style4.css
@@ -506,6 +506,7 @@ tr:nth-child(even) {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: row;
+  z-index: 1;
 }
 .first_layer p {
   width: 50%;
