--- a/Kapstondaw/capstone-frontend/scss/layout/_announcement.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_announcement.scss
@@ -35,7 +35,8 @@
         justify-content: flex-start;
         border: none;
         border-radius: 1rem;
-        box-shadow: 10px 20px 25px rgba(0 0 0 / 0.25);
+        border: 1px solid rgba($color: #000000, $alpha: 0.5);
+        // box-shadow: 10px 20px 25px rgba(0 0 0 / 0.25);
         text-align: center;
         width: fit-content;
         overflow: hidden;
