--- a/Kapstondaw/capstone-frontend/scss/layout/_concerns.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_concerns.scss
@@ -36,7 +36,8 @@
         justify-content: center;
         border: none;
         border-radius: 1rem;
-        box-shadow: 10px 20px 25px rgba(0 0 0 / 0.25);
+        border: 1px solid rgba($color: #000000, $alpha: 0.5);
+        // box-shadow: 10px 20px 25px rgba(0 0 0 / 0.25);
         padding: 2rem;
         text-align: center;
 
