--- a/Kapstondaw/capstone-frontend/scss/layout/_services.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_services.scss
@@ -1,5 +1,4 @@
 .services {
-  background-color: #eeeef4;
   width: 100%;
   height: 100vh;
   .serve {
@@ -35,7 +34,8 @@
         justify-content: center;
         border: none;
         border-radius: 1rem;
-        box-shadow: 10px 20px 25px rgba(0 0 0 / 0.25);
+        border: 1px solid rgba($color: #000000, $alpha: 0.5);
+        // box-shadow: 10px 20px 25px rgba(0 0 0 / 0.25);
         padding: 2rem;
         text-align: center;
 
