--- a/Kapstondaw/capstone-frontend/scss/layout/_announcementHeader.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_announcementHeader.scss
@@ -54,7 +54,7 @@
 
   ul {
     display: none;
-    min-width: 500px;
+    min-width: 700px;
     @media (min-width: 375px) {
       display: flex;
       align-items: center;
@@ -67,7 +67,7 @@
       color: #fff;
       list-style: none;
       margin: 0;
-
+      font-size: 0.8rem;
       a {
         color: #fff;
       }
