--- a/Kapstondaw/capstone-frontend/scss/layout/_header.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_header.scss
@@ -25,7 +25,7 @@ header {
     max-width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 
   .header-image {
@@ -65,7 +65,7 @@ header {
     padding: 0;
     z-index: 2;
     @media (min-width: 375px) {
-      width: 100%;
+      width: 90%;
     }
 
     li {
@@ -98,7 +98,7 @@ header {
         }
       }
     }
-    li:nth-child(5) {
+    li:nth-child(1) {
       z-index: 2;
       display: block;
     }
