--- a/Kapstondaw/capstone-frontend/scss/styles.css
+++ b/Kapstondaw/capstone-frontend/scss/styles.css
@@ -43,7 +43,7 @@ header {
     max-width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
 header .header-image {
@@ -86,7 +86,7 @@ header ul {
 }
 @media (min-width: 375px) {
   header ul {
-    width: 100%;
+    width: 90%;
   }
 }
 header ul li {
@@ -123,7 +123,7 @@ header ul li .logo-container img {
     height: 181px;
   }
 }
-header ul li:nth-child(5) {
+header ul li:nth-child(1) {
   z-index: 2;
   display: block;
 }
@@ -275,7 +275,7 @@ header ul li:nth-child(5) {
 }
 .announcementHeader ul {
   display: none;
-  min-width: 500px;
+  min-width: 700px;
 }
 @media (min-width: 375px) {
   .announcementHeader ul {
@@ -291,6 +291,7 @@ header ul li:nth-child(5) {
   color: #fff;
   list-style: none;
   margin: 0;
+  font-size: 0.8rem;
 }
 .announcementHeader ul li a {
   color: #fff;
@@ -345,16 +346,27 @@ header ul li:nth-child(5) {
   }
 }
 .home .context button {
-  border: none;
-  background-color: #007236;
+  cursor: pointer;
+  border: 1px solid #007236;
+  background-color: #f8f9fa;
   border-radius: 2rem;
-  color: #fff;
+  font-weight: 600;
+  transition: all 0.2s ease-in-out;
   padding: 0.8rem 1.5rem;
+}
+.home .context button a {
+  color: #007236;
 }
 @media (min-width: 375px) {
   .home .context button {
     padding: 1rem 2rem;
   }
+}
+.home .context button:hover {
+  background-color: #007236;
+}
+.home .context button:hover a {
+  color: #f8f9fa;
 }
 .home .logo {
   position: absolute;
