--- a/Kapstondaw/capstone-frontend/scss/layout/_concerns.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_concerns.scss
@@ -17,11 +17,17 @@
   }
 
   .swiper {
-    height: calc(100vh - 40%);
-    width: 100%;
-    height: 80%;
+    width: 90%;
+    border-radius: 1rem;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: calc(100vh - 30%);
+    border-radius: 1rem;
+    overflow: hidden;
     @media (min-width: 375px) {
-      padding: 2rem;
+      // padding: 2rem;
     }
     .options {
       height: 95%;
