--- a/Kapstondaw/capstone-frontend/scss/layout/_index.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_index.scss
@@ -11,6 +11,7 @@
 @forward "concerns";
 @forward "announcement";
 @forward "contact_us";
+@forward "emergency_numbers";
 @forward "hotlines";
 @forward "footer";
 @forward "copyright";
@@ -25,3 +26,6 @@
 @forward "active-service";
 @forward "active-report";
 @forward "active-success";
+
+// chat
+@forward "chat";
