--- a/Kapstondaw/capstone-frontend/scss/styles.css
+++ b/Kapstondaw/capstone-frontend/scss/styles.css
@@ -1852,6 +1852,7 @@ footer .com ul li {
   transform: translateX(1000px);
   border-radius: 1rem;
   margin-bottom: 1rem;
+  background-color: #f8f9fa;
   transition: transform 0.5s ease-in-out;
 }
 .chat-container .chat-screen header {
@@ -1887,21 +1888,47 @@ footer .com ul li {
   align-items: center;
   justify-content: center;
 }
+.chat-container .chat-screen .messages-container {
+  height: 400px;
+  background-color: #f8f9fa;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: end;
+}
+.chat-container .chat-screen .messages-container .message-subContainer {
+  width: 100%;
+  display: flex;
+  align-items: end;
+  justify-content: end;
+  margin-bottom: 1rem;
+}
+.chat-container .chat-screen .messages-container .message-subContainer .main-message {
+  background-color: #0a7cff;
+  border-radius: 1rem;
+  padding: 0.5rem 0.8rem;
+  max-width: 200px;
+}
+.chat-container .chat-screen .messages-container .message-subContainer .main-message p {
+  margin: 0;
+  font-size: 0.8rem;
+  color: #f8f9fa;
+}
+.chat-container .chat-screen .messages-container .message-subContainer:last-of-type {
+  margin-bottom: 0;
+}
+.chat-container .chat-screen hr {
+  margin: 0;
+  width: 90%;
+  margin: 0 auto;
+  border: 1px solid rgba(0, 0, 0, 0.25);
+}
 .chat-container .chat-screen form {
   position: relative;
   border-radius: 0 0 1rem 1rem;
   background-color: #f8f9fa;
   box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.25);
-  height: 400px;
-}
-.chat-container .chat-screen form .messages-container {
-  height: 85%;
-}
-.chat-container .chat-screen form hr {
-  margin: 0;
-  width: 90%;
-  margin: 0 auto;
-  border: 1px solid rgba(0, 0, 0, 0.25);
 }
 .chat-container .chat-screen form .create-message {
   display: flex;
@@ -1909,6 +1936,7 @@ footer .com ul li {
   justify-content: center;
   gap: 0.3rem;
   height: 15%;
+  padding: 0.5rem 0.8rem;
 }
 .chat-container .chat-screen form .create-message input {
   padding: 0.5rem 0.8rem;
@@ -1930,6 +1958,21 @@ footer .com ul li {
   overflow: hidden;
 }
 .chat-container .click-chat button {
+  background-color: #0a7cff;
+  border: none;
+  border-radius: 2rem;
+  padding: 0.5rem 0.8rem;
+  color: #f8f9fa;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.2rem;
+}
+.chat-container .un-log {
+  overflow: hidden;
+}
+.chat-container .un-log a {
   background-color: #0a7cff;
   border: none;
   border-radius: 2rem;
