--- a/Kapstondaw/capstone-frontend/scss/layout/_chat.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_chat.scss
@@ -11,6 +11,7 @@
     transform: translateX(1000px);
     border-radius: 1rem;
     margin-bottom: 1rem;
+    background-color: #f8f9fa;
     transition: transform 0.5s ease-in-out;
     header {
       border-radius: 1rem 1rem 0 0;
@@ -49,23 +50,51 @@
       }
     }
 
+    .messages-container {
+      height: 400px;
+      background-color: #f8f9fa;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: end;
+      justify-content: end;
+      .message-subContainer {
+        width: 100%;
+        display: flex;
+        align-items: end;
+        justify-content: end;
+        margin-bottom: 1rem;
+
+        .main-message {
+          background-color: #0a7cff;
+          border-radius: 1rem;
+          padding: 0.5rem 0.8rem;
+          max-width: 200px;
+          p {
+            margin: 0;
+            font-size: 0.8rem;
+            color: #f8f9fa;
+          }
+        }
+      }
+
+      .message-subContainer:last-of-type {
+        margin-bottom: 0;
+      }
+    }
+
+    hr {
+      margin: 0;
+      width: 90%;
+      margin: 0 auto;
+      border: 1px solid rgba($color: #000000, $alpha: 0.25);
+    }
+
     form {
       position: relative;
       border-radius: 0 0 1rem 1rem;
       background-color: #f8f9fa;
       box-shadow: 10px 10px 15px rgba($color: #000000, $alpha: 0.25);
-      height: 400px;
-
-      .messages-container {
-        height: 85%;
-      }
-
-      hr {
-        margin: 0;
-        width: 90%;
-        margin: 0 auto;
-        border: 1px solid rgba($color: #000000, $alpha: 0.25);
-      }
 
       .create-message {
         display: flex;
@@ -73,6 +102,7 @@
         justify-content: center;
         gap: 0.3rem;
         height: 15%;
+        padding: 0.5rem 0.8rem;
 
         input {
           padding: 0.5rem 0.8rem;
@@ -97,6 +127,22 @@
   .click-chat {
     overflow: hidden;
     button {
+      background-color: #0a7cff;
+      border: none;
+      border-radius: 2rem;
+      padding: 0.5rem 0.8rem;
+      color: #f8f9fa;
+      font-weight: 600;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.2rem;
+    }
+  }
+
+  .un-log {
+    overflow: hidden;
+    a {
       background-color: #0a7cff;
       border: none;
       border-radius: 2rem;
