--- a/Kapstondaw/BACKENDMONATO/style4.css
+++ b/Kapstondaw/BACKENDMONATO/style4.css
@@ -340,7 +340,7 @@ tr:nth-child(even) {
 
 .modal-addAnnouncement {
   display: flex;
-  z-index: 2;
+  z-index: 4;
   height: 100vh;
   position: fixed;
   background: rgba(0, 0, 0, 0.45);
@@ -349,7 +349,7 @@ tr:nth-child(even) {
   right: 0;
   bottom: 0;
   overflow: auto;
-  padding: 9% 0 0 29%;
+  padding: 12% 0 0 25%;
   display: none;
 }
 .modal-editAnnouncement {
@@ -363,7 +363,7 @@ tr:nth-child(even) {
   right: 0;
   bottom: 0;
   overflow: auto;
-  padding: 9% 0 0 29%;
+  padding: 12% 0 0 25%;
   display: none;
 }
 
@@ -371,12 +371,12 @@ tr:nth-child(even) {
   display: flex;
   position: fixed;
   flex-direction: column;
-  border-radius: 20px;
+  border-radius: 5px;
   background: #f8f8f8;
-  width: 625px;
-  height: 580px;
+  width: 700px;
+  height: auto;
   padding: 20px;
-  overflow: auto;
+
 }
 
 .title-container {
@@ -421,7 +421,156 @@ tr:nth-child(even) {
   width: 100%;
   margin-right: 30px;
 }
+.information-cont-line{
+  display: flex;
+  flex-direction: row;
+  margin-left: 20px;
+  width: 100%;
 
+  justify-content: flex-start;
+  align-items: center;
+}
+ .information-cont-line p{
+  color: #000;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.information-cont-line .line{
+  height: 1px;
+  width: 425px;
+  background-color: #999;
+  margin-left: 5px;
+}
+.information-cont-line .line1{
+  height: 1px;
+  width: 457px;
+  background-color: #999;
+  margin-left: 5px;
+}
+.input-announcement-cont {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-left: 20px;
+}
+.input-announcement-cont .title-date-cont {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin-top: 5px;
+  margin-left: 10px;
+}
+.input-announcement-cont .title-date-cont .title-cont{
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  color: #000;
+
+  font-family: Poppins;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+
+}
+.input-announcement-cont .title-date-cont .date-cont {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  color: #000;
+
+  font-family: Poppins;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  
+}
+.input-announcement-cont .title-date-cont .title-cont input {
+  height: 30px;
+  width: 100%;
+}
+.input-announcement-cont .title-date-cont .title-cont select {
+  width: 100%;
+  height: 30px;
+}
+.input-announcement-cont .details-cont {
+  display: flex;
+  flex-direction: column;
+  color: #000;
+
+  font-family: Poppins;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: 10px;
+
+  margin-left: 10px;
+}
+.input-announcement-cont .details-cont textarea{
+  width: 93%;
+  height: 100px;
+  padding: 5px 5px;
+}
+
+.option-cont {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-left: 20px;
+}
+.option-cont p {
+  margin-left: 10px;
+  color: #000;
+
+  font-family: Poppins;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: 10px;
+
+}
+.option-cont .from-cont {
+  margin-left: 30px;
+  color: #000;
+
+  font-family: Poppins;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: 10px;
+}
+.option-cont .from-cont input {
+  height: 30px;
+  width: 20%;
+  border: 1px solid #878787;
+  border-radius: 5px;
+  margin-left: 2px;
+}
+.option-cont .until-cont {
+  margin-left: 30px;
+  color: #000;
+
+  font-family: Poppins;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-top: 10px;
+}
+.option-cont .until-cont input {
+  height: 30px;
+  width: 20%;
+  border: 1px solid #878787;
+  border-radius: 5px;
+  margin-left: 5px;
+}
 .left input {
   height: 30px;
   margin-bottom: 20px;
@@ -453,12 +602,12 @@ tr:nth-child(even) {
   line-height: normal;
 }
 .upload {
-  color: #000;
   font-family: Poppins;
-  font-size: 13px;
+  font-size: 11px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   line-height: normal;
+  margin-top: 10px;
 }
 
 #preview {
@@ -467,13 +616,14 @@ tr:nth-child(even) {
   margin-top: 5px;
 }
 .image {
-  padding: 4px;
+  padding: 2px;
   cursor: pointer;
-  border: 1px solid #000000;
+  border: 1px solid #5c5858;
   border-radius: 4px;
   width: 100%;
   margin-top: 5px;
   width: 45%;
+  margin-bottom: 10px;
 }
 
 .submitAnnouncement {
@@ -481,13 +631,16 @@ tr:nth-child(even) {
   height: 29px;
 
   border-radius: 5px;
-  background: #007236;
-  color: rgb(255, 255, 255);
+  border: 1px solid #007236;
+  color: #007236;
   display: flex;
   justify-content: center;
   align-self: flex-end;
-  position: fixed;
-  margin-top: 510px;
+  cursor: pointer;
+}
+.submitAnnouncement:hover {
+  background-color: #007236;
+  color: #fff;
 }
 
 .home_request {
@@ -2320,3 +2473,97 @@ td {
   border: solid 1px #007236;
 }
 
+.Swiper_anouncement {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  align-self: center;
+  border-radius: 10px;
+  filter: drop-shadow(0px 4px 20px rgba(0, 0, 0, 0.25));
+  background-color: #FFF;
+  width: 87%;
+  margin-top: 10px;
+  height: 500px;
+}
+
+.Swiper_anouncement .swiper-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.Swiper_anouncement .swiper-container .swiper-wrapper {
+  display: flex;
+  flex-direction: row;
+  
+}
+.Swiper_anouncement .swiper-container .swiper-wrapper .one-announcement {
+  height: 450px;
+  width: 350px;
+  background-color: red;
+  margin: 0 20px;
+  border-radius: 10px;
+  background: #FFF;
+  box-shadow: 0px 8px 4px 0px rgba(0, 0, 0, 0.25);
+  
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10px;
+}
+.Swiper_anouncement .swiper-container .swiper-wrapper .one-announcement img {
+  width: 100%;
+  height: 300px;
+  
+}
+.Swiper_anouncement .swiper-container .swiper-wrapper .one-announcement .date {
+  color: white;
+  background-color: #007236;
+  padding: 5px 10px;
+
+  text-align: center;
+  font-family: Poppins;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+
+  margin-top: 5px;
+}
+
+.Swiper_anouncement .swiper-container .swiper-wrapper .one-announcement .title {
+  color: #353636;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-top: 5px;
+  padding: 0 10px;
+}
+
+.Swiper_anouncement .swiper-container .swiper-wrapper .one-announcement a {
+  color: #007236;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  text-decoration: none;
+  margin-top: 5px;
+}
+.Swiper_anouncement .swiper-container .swiper-wrapper .one-announcement .delete {
+  color: #F00;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  cursor: pointer;
+  position: fixed;
+  margin-top: 460px;
+}
